--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "lint": "eslint 'src/**/*.js' 'test/**/*.js' 'dev/**/*.js'",
     "test": "tape 'test/**/*.js'",
     "coverage": "istanbul cover tape 'test/**/*.js'",
-    "codecov": "cat coverage/coverage.json | codecov"
+    "codecov": "cat coverage/coverage.json | codecov",
+    "browser": "browserify src/browser.js -o browser/cf-graphql.js -t [ babelify --presets [ es2015 ] ]",
+    "browser-min": "uglifyjs browser/cf-graphql.js --compress --mangle -o browser/cf-graphql.js"
   },
   "dependencies": {
     "dataloader": "^1.3.0",
@@ -60,6 +62,10 @@
     "pluralize": "^7.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
     "codecov": "^2.3.0",
     "eslint": "^4.9.0",
     "express": "^4.15.4",
