--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "lodash.get": "^4.4.2",
     "lodash.upperfirst": "^4.3.1",
     "node-fetch": "^1.7.3",
-    "pluralize": "^7.0.0"
+    "pluralize": "^7.0.0",
+    "sanitize-html": "^1.15.0",
+    "showdown": "^1.8.2"
   },
   "devDependencies": {
     "codecov": "^2.3.0",
